<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginToptvLogin"
        android:fontFamily="@font/minecraft"
        android:text="@string/tvTxtLogin"
        android:textSize="@dimen/genTitleSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        style="@style/InInTextInputLayout"
        android:layout_marginHorizontal="@dimen/horizMargTI"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tilUsuarioHint" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContraseña"
        style="@style/InInTextInputLayout"
        android:layout_marginHorizontal="@dimen/horizMargTI"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieContraseña"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tilContraseñaHint"
            android:inputType="textPassword"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cbRecuerdame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/horizMargTI"
            android:text="@string/cbRecuerdame"/>


        <Button
            android:id="@+id/btnSingUp"
            style="@style/ButtonTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/btnSingUpMarg"
            android:text="@string/btnRegistrar"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonBacgroundAccent"
        android:layout_width="@dimen/btnLoginWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnTextLogin"/>
</LinearLayout>