<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.singup.SignUpFragment">

    <TextView
        android:id="@+id/tvTitleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/genMarg"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/tvTitleSingUp"
        android:textSize="@dimen/genTitleSize"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tieUser" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/marg48dp"
        android:layout_marginTop="@dimen/genMarg"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tilUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContraseña"
        android:layout_width="0dp"
        android:layout_height="@dimen/marg48dp"
        android:layout_marginTop="@dimen/genMarg"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword"
            android:inputType="textPassword"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarContraseña"
        android:layout_width="0dp"
        android:layout_height="@dimen/marg48dp"
        android:layout_marginTop="@dimen/genMarg"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tilContraseña"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieConfirmarContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieConfirmPassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/genMarg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/genMarg" />

    <CheckBox
        android:id="@+id/chNotificaciones"
        android:layout_width="0dp"
        android:layout_height="@dimen/marg48dp"
        android:layout_marginTop="@dimen/genMarg"
        android:text="@string/chNotficaciones"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/chTerms" />

    <CheckBox
        android:id="@+id/chTerms"
        android:layout_width="0dp"
        android:layout_height="@dimen/marg48dp"
        android:layout_marginTop="@dimen/genMarg"
        android:text="@string/chTerms"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarContraseña" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/genMarg"
        android:layout_marginBottom="@dimen/genMarg"
        android:clickable="true"
        app:tint="@color/white"
        app:elevation="@dimen/genMarg"
        android:contentDescription="@string/fab"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>